<resources>
    <string name="app_name">Kumparan Posting</string>
    <string name="kumparan_posting">Kumparan Posting</string>
    <string name="by_user">By User %s</string>
    <string name="body_message">Body Message</string>
    <string name="comments">Comments</string>
    <string name="email_placeholder">useremail@gmail.com</string>
    <string name="username">Username</string>
    <string name="name">User\'s Name</string>
    <string name="title">Title</string>
    <string name="album_placeholder">Album Name</string>
    <string name="albums">Albums</string>
    <string name="thumnail_image">thumnail_image</string>
    <string name="newest_post">Postingan Terbaru</string>
    <string name="home_subheader">Halaman utama akan menampilkan postingan dari seluruh pengguna</string>
    <string name="image_detail">image detail</string>
</resources>