<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/dimens_24dp"
    app:cardCornerRadius="@dimen/dimens_16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginLeft="@dimen/dimens_4dp"
    android:layout_marginRight="@dimen/dimens_4dp"
    android:layout_marginTop="@dimen/dimens_8dp"
    android:layout_marginBottom="@dimen/dimens_8dp"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimens_20dp">

        <TextView
            android:id="@+id/comment_user"
            style="@style/Text.Header3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/by_user" />

        <TextView
            android:id="@+id/comment_user_email"
            style="@style/Text.SubText2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comment_user"
            tools:text="@string/email_placeholder" />

        <TextView
            android:id="@+id/comment_body"
            style="@style/Text.Paragraph"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comment_user_email"
            tools:text="@string/body_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
